# healthcare_questionnaire

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  nginx.conf  pyproject.toml  questions.json
app/: main.py  settings.py
app/api/: routers.py
app/api/dependencies/: auth.py  bot.py  db_session.py  healthcheck.py  managers.py
app/api/endpoints/: api.py  router.py
app/db/: base_repository.py  sqlalchemy.py
app/db/answer/: answer_repo.py  patient_answer.py
app/db/migrations/: drop_enum.py
app/db/models/: __init__.py  answer_option.py  answer_options_group.py  patient.py  patient_answer.py  question.py  question_group.py  question_group_mapping.py  question_tags.py  questionnaire.py  questionnaire_item.py
app/db/operation/: operation.py  operation_repo.py
app/db/patient/: patient.py  patient_repo.py
app/db/period/: period_repo.py  periods.py
app/db/questionnaire/: questionnaire.py  questionnaire_repo.py
app/db/user/: questionnaire_repo.py  user.py
app/schemas/: __init__.py  answers_request.py  base_scheme.py
app/schemas/answer_option/: answer_option.py
app/schemas/answer_option_group/: answer_option_group.py
app/schemas/mhq/: hand.py  hands_score.py
app/schemas/operation/: operation.py  operation_in_creation.py
app/schemas/patient/: patient.py  patient_in_creation.py
app/schemas/patient_answer/: patient_answer.py  patient_answer_in_creation.py
app/schemas/period/: period.py
mocker/: mocker_handler.py  options.py  questions.py
templates/: create_patient.html  fill_questionnaire.html  main.html  show_patient.html
(+28 files in other folders)
