[tool.poetry]
name = "questionnaire"
version = "0.1.0"
description = "site - questionnaire for managing patient condition questionnaires"
authors = ["Leonid Gorbunov <leonid.gorbunov@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

SQLAlchemy = "*"

fastapi = "*"
uvicorn = "*"
pydantic = { version = "~1.10.4", extras = ["dotenv"] }

databases = { version = "*", extras = ["postgresql"] }
alembic = "*"
psycopg2-binary = "*"

loguru = "*"
python-multipart = "^0.0.10"
jinja2 = "^3.1.4"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.1"
autoflake = "1.4.0"
black = "22.3.0"
isort = "5.10.1"
mypy = "1.0.1"
wemake-python-styleguide = "0.16.0"

flake8-bandit = "2.1.2"  # https://github.com/PyCQA/bandit/issues/837
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

pytest = "~7.2.0"
pytest-asyncio = "~0.18.2"
pytest-cov = "~3.0.0"

asgi-lifespan = "~1.0.1"
requests = "~2.31.0"
respx = "~0.20.0"
httpx = "~0.25.0"

tenacity = "8.3.0"
markdown = "3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
